force-app/main/default/objects/Case/fields/tz__UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>tz__UTC_Offset__c</fullName>
    <description>Shows the UTC timezone offset of the Contact associated with the Case. Uses the address information, and in its absence the Phone number field in the calculation.</description>
    <inlineHelpText>Shows the UTC timezone offset of the Contact associated with the Case.</inlineHelpText>
    <label>UTC Offset</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>