force-app/main/default/objects/Case/fields/tz__UTC_Offset_Formula__c.field-meta.xml
<CustomField>
    <fullName>tz__UTC_Offset_Formula__c</fullName>
    <description>Shows the current UTC timezone offset of the Contact/Account associated with the Case.</description>
    <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__UTF_Offset__c, Account.tz__UTF_Offset__c)</formula>
    <inlineHelpText>Shows the UTC timezone offset of the Contact associated with the Case.</inlineHelpText>
    <label>UTC Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>