force-app/main/default/objects/Case/fields/Windows_Firewall_has_exceptions_set_up__c.field-meta.xml
<CustomField>
    <fullName>Windows_Firewall_has_exceptions_set_up__c</fullName>
    <label>Windows Firewall has exceptions set up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>