force-app/main/default/objects/Case/fields/XML_or_SQLite__c.field-meta.xml
<CustomField>
    <fullName>XML_or_SQLite__c</fullName>
    <label>XML or SQLite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>SQLite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>