force-app/main/default/objects/Case/fields/Xtend_AP_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Xtend_AP_Completed_Date__c</fullName>
    <label>Xtend/AP Completed Date</label>
    <type>DateTime</type>
</CustomField>