force-app/main/default/objects/Case/recordTypes/Accounting.recordType-meta.xml
<RecordType>
    <fullName>Accounting</fullName>
    <active>true</active>
    <businessProcess>Accounting</businessProcess>
    <description>Used to alert Accounting of changes to customers billing</description>
    <label>Accounting</label>
</RecordType>