force-app/main/default/objects/Case/recordTypes/Activation.recordType-meta.xml
<RecordType>
    <fullName>Activation</fullName>
    <active>true</active>
    <businessProcess>Activation</businessProcess>
    <description>This is used to track and document the activation process of an account</description>
    <label>Activation</label>
</RecordType>