force-app/main/default/objects/Case/recordTypes/Cancel_Request.recordType-meta.xml
<RecordType>
    <fullName>Cancel_Request</fullName>
    <active>true</active>
    <businessProcess>Cancel Request</businessProcess>
    <description>When an office requests to cancel this case type should be used</description>
    <label>Cancel Request</label>
</RecordType>