force-app/main/default/objects/Case/recordTypes/Check_Up_Case.recordType-meta.xml
<RecordType>
    <fullName>Check_Up_Case</fullName>
    <active>true</active>
    <businessProcess>Check-Up</businessProcess>
    <description>Created to track check-ups with the office</description>
    <label>Check-Up</label>
</RecordType>