force-app/main/default/objects/Case/recordTypes/Feature_Enhancement.recordType-meta.xml
<RecordType>
    <fullName>Feature_Enhancement</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <description>Cases for New Feature Enhancement</description>
    <label>Feature Enhancement</label>
</RecordType>