force-app/main/default/objects/Case/recordTypes/Onboarding_Case.recordType-meta.xml
<RecordType>
    <fullName>Onboarding_Case</fullName>
    <active>true</active>
    <businessProcess>Onboarding</businessProcess>
    <label>Onboarding</label>
</RecordType>