force-app/main/default/objects/Case/recordTypes/Playbook.recordType-meta.xml
<RecordType>
    <fullName>Playbook</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <label>Playbook</label>
</RecordType>