force-app/main/default/objects/Case/recordTypes/Sync_List_Case.recordType-meta.xml
<RecordType>
    <fullName>Sync_List_Case</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <description>Created only for when a Sync goes down and is caught by an SR employee</description>
    <label>Sync List Case</label>
</RecordType>