force-app/main/default/objects/Case/validationRules/Cannot_have_Automated_Mail_Subject.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_have_Automated_Mail_Subject</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
(CONTAINS(Subject, &quot;Re: Appointment Confirmation&quot;)
 || 
CONTAINS(Subject, &quot;Thank you for your interest in our office!&quot;)
 || 
CONTAINS(Subject, &quot;Re: Online profile appointment request&quot;)
 || 
CONTAINS(Subject, &quot;Thanks for your request&quot;)
 || 
CONTAINS(Subject, &quot;Re: Appointment confirmation&quot;)
||
CONTAINS(Subject, &quot;Appointment confirmation&quot;)
||
CONTAINS(Subject, &quot;Re: Appointment Request&quot;)
||
CONTAINS(Subject, &quot;(autoresponse) Appointment confirmation&quot;)
||
CONTAINS(Subject, &quot;Unmonitored Inbox&quot;)
|| 
CONTAINS(Subject, &quot;RE: Online profile appointment request&quot;))</errorConditionFormula>
    <errorMessage>Change subject of case</errorMessage>
</ValidationRule>