force-app/main/default/objects/Case/validationRules/Case_must_have_Category_Subcategory.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_must_have_Category_Subcategory</fullName>
    <active>true</active>
    <errorConditionFormula>(
				RecordType.Name = &quot;Sync List Case&quot; ||
				RecordType.Name = &quot;Support&quot;
)
&amp;&amp;
ISPICKVAL( Resolution__c, &quot;Fixed&quot; )
&amp;&amp;
ISCHANGED( Resolution__c )
&amp;&amp;
(
				ISBLANK(TEXT(Category__c)) ||
				ISBLANK(TEXT(Product__c)) ||
				ISNULL(TEXT(Category__c)) ||
				ISNULL(TEXT(Product__c))
)</errorConditionFormula>
    <errorMessage>You must select a category and subcategory to close this case</errorMessage>
</ValidationRule>