force-app/main/default/objects/Case/validationRules/Churn_Risk_Spoke_w_Decision_Maker.validationRule-meta.xml
<ValidationRule>
    <fullName>Churn_Risk_Spoke_w_Decision_Maker</fullName>
    <active>true</active>
    <description>When a rep has spoken to the decision maker they also need to fill out the Churn Risk.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Churn_Risk__c,&quot;&quot;)),Spoke_with_Decision_Maker__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Spoke_with_Decision_Maker__c</errorDisplayField>
    <errorMessage>You must check the Spoke with Decision Maker when you have selected a Churn Risk</errorMessage>
</ValidationRule>