force-app/main/default/objects/Case/validationRules/Not_Eligible_for_Support.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Eligible_for_Support</fullName>
    <active>false</active>
    <description>Will prohibit customers marked as Not Eligible for Support from opening support cases.</description>
    <errorConditionFormula>Account.Not_Eligible_for_Support__c =TRUE</errorConditionFormula>
    <errorMessage>This account is not currently eligible for support.</errorMessage>
</ValidationRule>