force-app/main/default/objects/Case/listViews/Accounting_Cases.listView-meta.xml
<ListView>
    <fullName>Accounting_Cases</fullName>
    <columns>Subscriber_ID__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Sugar_Case_Number__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Accounting</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounting Cases</label>
    <sharedTo>
        <roleAndSubordinates>Accountant</roleAndSubordinates>
        <roleAndSubordinates>Controller</roleAndSubordinates>
        <roleAndSubordinates>Finance_Director</roleAndSubordinates>
    </sharedTo>
</ListView>