force-app/main/default/objects/Case/listViews/Accounting_Queue.listView-meta.xml
<ListView>
    <fullName>Accounting_Queue</fullName>
    <columns>Subscriber_ID__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>SR_Date_Created__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounting Queue</label>
    <queue>Accounting_Queue</queue>
    <sharedTo>
        <role>Accountant</role>
        <role>Controller</role>
        <role>Finance_Director</role>
    </sharedTo>
</ListView>