force-app/main/default/objects/Case/listViews/Activation_Cases_In_Integration.listView-meta.xml
<ListView>
    <fullName>Activation_Cases_In_Integration</fullName>
    <columns>Subscriber_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Team_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Activation</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Integration</value>
    </filters>
    <label>Activation Cases &quot;In Integration&quot;</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>