force-app/main/default/objects/Case/listViews/All_Open_Activation_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Activation_Cases</fullName>
    <columns>Subscriber_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Stage__c</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>First_Contact_Class__c</columns>
    <columns>Custom_Settings_Class__c</columns>
    <columns>Graphics_Setup_Class__c</columns>
    <columns>Sync_Install_Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Activation</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Provisioned,Pending Cancel,Rejected</value>
    </filters>
    <label>All Open Activation Cases</label>
    <sharedTo>
        <role>CSR_Director</role>
        <role>CSR_Manager</role>
        <role>VP_CSR</role>
    </sharedTo>
</ListView>