force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>Subscriber_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SR_Date_Created__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Category__c</columns>
    <columns>Product__c</columns>
    <columns>Topics__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Resolution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Support</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All Open Support Cases</label>
    <sharedTo>
        <role>CSR_Director</role>
        <role>CSR_Manager</role>
        <role>VP_CSR</role>
    </sharedTo>
</ListView>