force-app/main/default/objects/Case/listViews/Auto_Closed_Sync_Cases.listView-meta.xml
<ListView>
    <fullName>Auto_Closed_Sync_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Sync_List_Case</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Resolution__c</field>
        <operation>equals</operation>
        <value>Resumed</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>mschetse</value>
    </filters>
    <label>Auto Closed Sync Cases</label>
    <sharedTo>
        <role>CSR_Director</role>
        <role>CSR_Manager</role>
    </sharedTo>
</ListView>