force-app/main/default/objects/Case/listViews/Chat_Bot_Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Chat_Bot_Case_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>Chat Bot Case Queue</label>
    <queue>Chat_Bot_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>