force-app/main/default/objects/Case/listViews/Chatbot.listView-meta.xml
<ListView>
    <fullName>Chatbot</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Chatbot</value>
    </filters>
    <label>Chatbot</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>