force-app/main/default/objects/Case/listViews/CS_Escalations_Case.listView-meta.xml
<ListView>
    <fullName>CS_Escalations_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CS Escalations</label>
    <queue>CS_Escalations</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>