force-app/main/default/objects/Case/listViews/CS_Training_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CS_Training_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Fast Track Queue</label>
    <queue>CS_Training_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>