force-app/main/default/objects/Case/listViews/Delete_Auto_Response_Case.listView-meta.xml
<ListView>
    <fullName>Delete_Auto_Response_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>7/1/2018 12:00 AM</value>
    </filters>
    <label>Delete / Auto Response Queue</label>
    <queue>Delete_Auto_Response</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>